timeline parcial con las primeras 2000 cooperativas
Subo la versión que se mostró en el evento. Agrego un readme con
información y elimino archivos que no se usan.

--- a/timeline/timeline.css
+++ b/timeline/timeline.css
@@ -1,4 +1,13 @@
+body {
+  font-family: Helvetica;
+}
+ 
 #timeline-coops {
-  height: 500px;
+  height: 600px;
   border: 1px solid #AAA;
 }
+
+.timeline-event-label {
+  font-size: 0.8em;
+}
+
